--- a/src/app/components/simple-reactive-form/simple-reactive-form.component.html
+++ b/src/app/components/simple-reactive-form/simple-reactive-form.component.html
@@ -7,7 +7,8 @@
           placeholder="Max length 5"
           formControlName="input">
         <mat-hint>Type more than 5 characters</mat-hint>
-        <mat-error *ngIf="form.get('input').invalid">maxLength</mat-error>
+        <!-- <mat-error *ngIf="form.get('input').invalid">maxLength</mat-error> -->
+        <fveh-form-errors-presenter [field]="form.get('input')"></fveh-form-errors-presenter>
       </mat-form-field>
     </form>
   </mat-card-content>
