--- a/src/app/components/simple-reactive-form/simple-reactive-form.component.html
+++ b/src/app/components/simple-reactive-form/simple-reactive-form.component.html
@@ -1,14 +1,18 @@
 <mat-card>
+  <mat-card-title>
+    Errors Presenter Component
+  </mat-card-title>
   <mat-card-content>
     <form [formGroup]="form">
       <mat-form-field appearance="standard">
-        <mat-label>Max Length: 5</mat-label>
+        <mat-label>Max Length: 5 - Required Field</mat-label>
         <input matInput
-          placeholder="Max length 5"
+          placeholder="Required and Max length 5"
           formControlName="input">
         <mat-hint>Type more than 5 characters</mat-hint>
-        <!-- <mat-error *ngIf="form.get('input').invalid">maxLength</mat-error> -->
-        <fveh-errors-presenter [field]="form.get('input')"></fveh-errors-presenter>
+        <mat-error>
+          <fveh-errors-presenter [field]="form.get('input')"></fveh-errors-presenter>
+        </mat-error>
       </mat-form-field>
     </form>
   </mat-card-content>
