wip: working on code component for demo app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,4 @@
   <mat-card-subtitle>Some helpers to help you with form validation :)</mat-card-subtitle>
 </mat-card>
 
-<app-simple-reactive-form></app-simple-reactive-form>
+<app-errors-presenter></app-errors-presenter>
