Trying to avoid the function call is not permited on module declaration :(

--- a/src/app/components/errors-presenter/errors-presenter.component.html
+++ b/src/app/components/errors-presenter/errors-presenter.component.html
@@ -36,7 +36,7 @@
       <mat-tab label="Module">
         <pre [innerHTML]="getModuleCode()"></pre>
         <a href="https://github.com/angular/angular/issues/23609" target="_blank">
-          <strong> While this issue still open, we can't use forRoot configuration :(</strong>
+          <strong> While this issue still open, we can't use forRoot configuration :( but yes, in the future the module configuration will be NgFvehLibModule.forRoot(errorsMessageObj)</strong>
         </a>
       </mat-tab>
     </mat-tab-group>
