group match validator example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,4 @@
 
 <app-errors-presenter></app-errors-presenter>
 <app-form-is-valid-decorator></app-form-is-valid-decorator>
+<app-group-match-validator></app-group-match-validator>
