some touches on validation doc

--- a/src/app/components/group-match-validator/group-match-validator.component.html
+++ b/src/app/components/group-match-validator/group-match-validator.component.html
@@ -4,17 +4,17 @@
       <h2>Group Match Validator</h2>
       <p>This custom validator should help you with field match validations, e.g. password and confirm password.</p>
       <p>To use it, you should create a new group in your form and send a extra parameters after controls:</p>
-      <pre>validator: FvehValidators.groupMatch([friendlyFieldNames])</pre>
+      <pre>validator: FvehValidators.groupMatch(['E-mail', 'Email Confirmation'])</pre>
 
-      <p>FrieldlyFieldNames: If the fields doens't match, it will generate a new error on field</p>
+      <p>Param FrieldlyFieldNames: If the fields doens't match, it will generate a new error on field with this as a payload</p>
       <pre>
       Error: {{'{'}}
         fvehGroupMatch: {{'{'}}
-          fields: friendlyFieldNames
+          fields: friendlyFieldNames // ['E-mail', 'Email Confirmation']
         },
       }
       </pre>
-      <p>Then you can use this error for any purposes :)</p>
+      <p>Then you can use this error for any purposes :), se the example bellow.</p>
     </div>
 
     <mat-tab-group>
