changes on demo app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<mat-card>
-  <mat-card-title>Welcome to NG Form Validations Errors Helper</mat-card-title>
-  <mat-card-subtitle>Some helpers to help you with form validation :)</mat-card-subtitle>
-</mat-card>
+<app-toolbar></app-toolbar>
 
-<app-errors-presenter></app-errors-presenter>
-<app-form-is-valid-decorator></app-form-is-valid-decorator>
-<app-group-match-validator></app-group-match-validator>
+<div class="content">
+  <app-errors-presenter></app-errors-presenter>
+  <div class="spacer"></div>
+  <app-form-is-valid-decorator></app-form-is-valid-decorator>
+  <div class="spacer"></div>
+  <app-group-match-validator></app-group-match-validator>
+  <div class="spacer"></div>
+</div>
+
+<app-footer></app-footer>
