app fix build and typos

--- a/src/app/components/form-is-valid-decorator/form-is-valid-decorator.component.html
+++ b/src/app/components/form-is-valid-decorator/form-is-valid-decorator.component.html
@@ -4,7 +4,7 @@
       <h2>Form Is Valid Decorator</h2>
       <p>This decorator should help you with some functions that should be executed only if the form is valid (e.g. onSubmit)</p>
       <p>Send the form name as parameter and the decorated function will be executed only if this form is valid.</p>
-      <p>Behind the scenes, decorator will be checking if controls is valid, if not, it will pass by every control (deeply)
+      <p>Behind the scenes, decorator will be checking if controls are valid, if not, it will pass by every control (deeply)
         marking the fields as touched.</p>
     </div>
     <mat-tab-group>
