--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -16,7 +16,7 @@
         href="https://github.com/guilhermewaess/ng-fveh"
         target="_blank">
         <img class="nav-github-logo"
-          src="/assets/icons/GitHub-Mark-120px-plus.png"
+          src="./assets/icons/GitHub-Mark-120px-plus.png"
           alt="GitHub">
         <span>GitHub</span>
       </a>
