--- a/src/app/components/errors-presenter/errors-presenter.component.html
+++ b/src/app/components/errors-presenter/errors-presenter.component.html
@@ -3,12 +3,12 @@
   <mat-card>
     <div class="instructions">
       <h2>Errors Presenter</h2>
-      <p>Errors presenter is a component helper with can easly deal with your form errors, works like this: Import the component
+      <p>Errors presenter is a component helper which can easily deal with your form errors, works like this: Import the component
         right under input (or wherever you want) and pass the field control as param.</p>
       <p>Then the component will react and show all errors in control.errors property.</p>
-      <p>You should create a object with error object key and function which returns a string. If the error have any payload,
-        you can receive as parameter on this function. Check the Module example above.</p>
-      Using Angular Material? just put fveh-errors-presenter inside the mat-error tags
+      <p>You should create an object with error name as key and function which returns a string as value. If the error has any payload,
+        you will receive the error payload as parameter on this function. Check the Module example bellow.</p>
+      Using Angular Material? just put fveh-errors-presenter inside the mat-error tags.
     </div>
     <mat-tab-group>
       <mat-tab label="Example">
