--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,9 +1,9 @@
 <div>
   <mat-toolbar color="secondary">
-    <div>
-      <!-- <img src="assets/logo.png"
+    <div class="logo-container">
+      <img src="./assets/logo.png"
         alt="Logo"
-        class="logo"> -->
+        class="logo">
     </div>
     <div class="welcome-texts">
       <div class="welcome-text-title">Welcome to NG Form Validations Errors Helper</div>
@@ -11,7 +11,7 @@
     </div>
     <!-- <span class="fill-remaining-space"></span> -->
 
-    <div>
+    <div class="right-buttons">
       <a mat-button
         href="https://github.com/guilhermewaess/ng-fveh"
         target="_blank">
