--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -2,17 +2,30 @@
   justify-content: space-between;
 }
 
-.fill-remaining-space {
-  flex: 1 1 auto;
+.logo-container {
+  width: 10%;
+  max-height: 100%;
+  
+  img {
+    width: 100%;
+    height: 64px;
+    object-fit: cover;
+  }
 }
 
-.nav-github-logo {
-  height: 21px;
-  margin: 0 7px 2px 0;
-  vertical-align: middle;
+.right-buttons {
+  width: 10%;
+  text-align: center;
+
+  .nav-github-logo {
+    height: 21px;
+    margin: 0 7px 2px 0;
+    vertical-align: middle;
+  }
 }
 
 .welcome-texts {
+  flex: 1 1 auto;
   text-align: center;
 
   .welcome-text-title {
